adjust article align and fixed nav on blogpost.html

--- a/blogpost.css
+++ b/blogpost.css
@@ -15,6 +15,8 @@
 }
 
 /* to make img same size */
+
+
 .img-size {
     width: 100%;
     height: 30vw;
@@ -30,4 +32,12 @@
 /* to move to bottom */
 .author-box {
     margin-top: auto;
+    padding-right: 3vw;
+}
+
+.article {
+    display: flex;
+    justify-content: center;
+    margin-top: 2vw;
+    padding: 2vw;
 }
